<resources>
    <string name="app_name">Final_NextStop</string>
    <string name="select_location">Select location</string>
    <string name="please_select_location">Please select location</string>
    <string name="please_write_description">Please write description</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_all_posts">Are you sure you want to delete all posts?</string>
    <string name="are_you_sure_you_want_to_delete_the_post">Are you sure you want to delete the post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gallery">Gallery</string>
    <string name="all_posts_deleted">All posts deleted</string>
    <string name="new_post">New Post</string>
    <string name="location">Location</string>
    <string name="place">Place</string>
    <string name="add_place">Add place</string>
    <string name="description">Description</string>
    <string name="add_your_recommendations">Add your recommendations</string>
    <string name="add_post">Add Post</string>
    <string name="your_location">Your Location</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="my_journey">My journey</string>
    <string name="delete_all">Delete all</string>
    <string name="the_post_deleted">Post deleted</string>
    <string name="no_posts_comment">No posts yet,\npress ➕ in order to add your first post!</string>
    <string name="check_weather">Check weather</string>
    <string name="in_order_to_delete_an_weather_item_swipe_left">In order to delete an weather item, swipe left</string>
    <string name="no_weather_items_yet_npress_in_order_to_add_your_first_weather_item">No weather items yet,\npress ➕ in order to add your first weather item!</string>
    <string name="country_name">Country Name</string>
    <string name="clear_sky">Clear sky</string>
    <string name="air_pollution">Air pollution: %1$s</string>
    <string name="air_pollution_level">Air pollution: %1$s</string>
    <string name="in_order_to_delete_a_post_swipe_left">In order to delete a post, swipe left</string>
    <string name="my_favorite_trips">My favorite trips</string>
    <string name="you_haven_t_liked_any_posts_yet_ntap_the_heart_icon_on_a_post_to_add_it_to_your_favorites">You haven\'t liked any posts yet.\nTap the heart icon on a post to add it to your favorites.</string>
    <string name="add_image">Add image</string>
    <string name="new_weather_item">New weather item</string>
    <string name="weather_by_country">Weather by country</string>
    <string name="air_pollution_by_country">Air pollution by country</string>
    <string name="choose_country">Choose country:</string>
    <string name="send">Send</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="maximum_10_images">Maximum 10 images</string>
    <string name="temperature_c">Temperature: %1$s°C</string>
    <string name="are_you_sure_you_want_to_delete_the_weather_item">are you sure you want to delete the weather item?</string>
    <string name="are_you_sure_you_want_to_delete_all_weather_items">Are you sure you want to delete all weather items?</string>
    <string name="please_select_an_action">Please select an action</string>
    <string name="please_choose_a_country">Please choose a country</string>
    <string name="no_valid_capital_city_was_found">No valid capital city was found</string>
    <string name="weather_in">Weather in %1$s</string>
    <string name="forecast_in">Forecast in %1$s</string>
    <string name="air_pollution_in">Air pollution in %1$s</string>
    <string name="unknown_error">Unknown error</string>
    <string name="forecast">Forecast: %1$s</string>
    <string name="error_fetching_forecast">Error fetching forecast</string>
    <string name="no_coordinates_found_for_city">No coordinates found for city: %1$s</string>
    <string name="unable_to_read_pollution_level_aqi">Unable to read pollution level (AQI)</string>
    <string name="very_good">very good</string>
    <string name="unknown">Unknown</string>
    <string name="unhealthy">unhealthy</string>
    <string name="moderate">moderate</string>
    <string name="good">good</string>
    <string name="dangerous">dangerous</string>
    <string name="error_retrieving_air_pollution_data">Error retrieving air pollution data</string>
    <string name="error_locating_coordinates">Error locating coordinates</string>
    <string name="response_body_is_null">Response body is null</string>
    <string name="network_call_has_failed_for_the_following_reason">"Network call has failed for the following reason: "</string>
    <string name="forecast_by_country">forecast by country</string>
    <string name="add_images">Add images</string>

</resources>