<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/border_black"
        android:padding="5dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/post_image"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_view_post_location"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:id="@+id/txt_view_post_place"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/place"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_gravity="bottom"/>

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/txt_view_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_view_date_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/date"
            android:textColor="@color/grey"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>