<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.add_character.AddPostFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:iconTint="@color/black"
            app:iconSize="24sp"
            android:id="@+id/btn_back_from_addPost"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="30dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/new_post"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/rubik_variablefont_wght"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_countries_add_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/place"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_txt_post_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/add_place"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_txt_post_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top|start"
                android:hint="@string/add_your_recommendations"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="18sp"/>


<!--            <Button-->
<!--                android:id="@+id/gallery_btn"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:backgroundTint="@color/black"-->
<!--                android:gravity="center"-->
<!--                android:text="@string/gallery"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Add images"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:nestedScrollingEnabled="true"
                android:overScrollMode="always"
                android:orientation="horizontal"/>

<!--            <ImageView-->
<!--                android:id="@+id/result_image"-->
<!--                android:layout_width="150dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:src="@drawable/border_black"/>-->


            <Button
                android:id="@+id/btn_add_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/add_post"
                android:textColor="@color/white"
                android:layout_marginBottom="40dp"/>


        </LinearLayout>


    </LinearLayout>


</ScrollView>