<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.single_characters.EditDescriptionFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">



        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:iconTint="@color/black"
            app:iconSize="24sp"
            android:id="@+id/btn_back_from_edit_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@color/light_blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_save_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:cornerRadius="20dp"
                        app:icon="@drawable/save_post"
                        app:iconSize="20dp"
                        app:iconTint="@color/white" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/location_icon_description" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />





                    </LinearLayout>

                    <Spinner
                        android:id="@+id/spinner_countries_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/place"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <EditText
                        android:id="@+id/edit_txt_edit_post_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/add_place"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/editViewPagerImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:scaleType="fitCenter" />

                    <me.relex.circleindicator.CircleIndicator3
                        android:id="@+id/edit_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="12dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/grey"
                        android:text="@string/add_image"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:icon="@drawable/baseline_add_24"
                        app:iconPadding="8dp"
                        app:iconTint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edit_text_edit_post_description"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/edit_text_background"
                        android:gravity="top|start"
                        android:hint="@string/add_your_recommendations"
                        android:inputType="textMultiLine"
                        android:maxLines="10"
                        android:overScrollMode="always"
                        android:scrollbars="vertical"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_view_date_edit_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="40dp"
                        android:text="@string/date"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </LinearLayout>


</ScrollView>