<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.single_characters.DescriptionFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">



        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:iconTint="@color/black"
            app:iconSize="24sp"
            android:id="@+id/btn_back_from_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                android:backgroundTint="@color/light_blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/location_icon_description" />

                        <TextView
                            android:id="@+id/txt_view_post_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/your_location"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/image_view_edit_post"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/edit" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_view_post_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/place"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_marginBottom="10dp"/>


                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPagerImages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clipToPadding="false"
                        android:clipChildren="false"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:overScrollMode="never"
                        android:visibility="gone"
                        />

                    <me.relex.circleindicator.CircleIndicator3
                        android:id="@+id/indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="-10dp"
                        android:visibility="gone"
                        />



                    <TextView
                        android:id="@+id/txt_view_post_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_view_date_description"
                        android:text="@string/date"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        android:textColor="@color/grey"
                        android:layout_marginBottom="40dp"

                        />


                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </LinearLayout>


</ScrollView>