<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.all_characters.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/img_logo"
                android:layout_gravity="start"
                android:src="@drawable/logo_of_app"
                android:layout_weight="0.1" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="top"
            android:text="@string/check_weather"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/rubik_variablefont_wght"/>



            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:id="@+id/weather_image_view"
                android:src="@drawable/weather_icon"
                android:layout_marginBottom="10dp"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardWeatherItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/light_blue"
                    app:titleTextColor="@color/light_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_swipe_hint"
                    android:text="@string/in_order_to_delete_an_weather_item_swipe_left"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:gravity="center"
                    android:visibility="gone"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="500dp">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_weather_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:nestedScrollingEnabled="true"
                        android:overScrollMode="always" />

                    <TextView
                        android:id="@+id/text_view_no_weather_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="24dp"
                        android:text="@string/no_weather_items_yet_npress_in_order_to_add_your_first_weather_item"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:background="@color/white"
                        android:visibility="gone" />

                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>